updated session files on pandas

--- a/Pandas/session_01_pandas_in_py.ipynb
+++ b/Pandas/session_01_pandas_in_py.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeableNote: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (2.1.4)\n",
       "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3.post1)\n",
       "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,6 @@
       "location : trichy\n",
       "role : trainer\n",
       "\n",
-      "\n",
       "       name location     role\n",
       "0  karthick   trichy  trainer\n"
      ]
@@ -61,10 +60,11 @@
     "print(data)\n",
     "for key,value in data.items():\n",
     "    print(key,\":\", value)\n",
+    "    \n",
     "\n",
+    "# print(\"\")\n",
     "print(\"\")\n",
-    "print(\"\")\n",
-    "# # #creating dataframe\n",
+    "# # # #creating dataframe\n",
     "df=pd.DataFrame(data, index=[0])\n",
     "print(df) #printing dataframe\n"
    ]
@@ -89,6 +89,65 @@
     "df=pd.DataFrame(data, index=['data_01'])\n",
     "print(df)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'names': ['karthick', 'ragu', 'Ravi'], 'location': ['trichy', 'Chennai', 'Trichy'], 'role': ['trainer', 'Admin', 'Trainer']}\n",
+      "names : ['karthick', 'ragu', 'Ravi']\n",
+      "location : ['trichy', 'Chennai', 'Trichy']\n",
+      "role : ['trainer', 'Admin', 'Trainer']\n",
+      "\n",
+      "      names location     role\n",
+      "0  karthick   trichy  trainer\n",
+      "1      ragu  Chennai    Admin\n",
+      "2      Ravi   Trichy  Trainer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# declaring data as dictionary\n",
+    "data={'names':[\"karthick\",'ragu','Ravi'],\n",
+    "      'location':['trichy','Chennai','Trichy'], 'role':['trainer',\"Admin\",\"Trainer\"]}\n",
+    "print(data)\n",
+    "for key,value in data.items():\n",
+    "    print(key,\":\", value)\n",
+    "    \n",
+    "\n",
+    "print(\"\")\n",
+    "# print(\"\")\n",
+    "# # # # #creating dataframe\n",
+    "df=pd.DataFrame(data, index=[0,1,2])\n",
+    "print(df) #printing dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            names location     role\n",
+      "data_01  karthick   trichy  trainer\n",
+      "data_02      ragu  Chennai    Admin\n",
+      "data_03      Ravi   Trichy  Trainer\n"
+     ]
+    }
+   ],
+   "source": [
+    "#changeing index from default to assigned\n",
+    "df=pd.DataFrame(data, index=['data_01',\"data_02\",\"data_03\"])\n",
+    "print(df)\n"
    ]
   },
   {
@@ -133,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +294,6 @@
       "33      Bob\n",
       "44  Charlie\n",
       "55    David\n",
-      "\n",
       "       name  Age  Score\n",
       "22    Alice   25     85\n",
       "33      Bob   30     90\n",
@@ -261,13 +319,13 @@
     "df=pd.DataFrame(names,columns=[\"name\"], index=[22,33,44,55])\n",
     "print(df)\n",
     "\n",
-    "# adding additional columns to the existing data\n",
+    "# # adding additional columns to the existing data\n",
     "ages = [25, 30, 35, 40]\n",
     "scores = [85, 90, 88, 92]\n",
     "\n",
     "df['Age'] = ages\n",
     "df['Score'] = scores\n",
-    "print(\"\")\n",
+    "# print(\"\")\n",
     "print(df)"
    ]
   },
@@ -329,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +448,7 @@
        "0    1   1499     25  80.0  4.0      14  no    no     yes   94      1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
