updated matplotlib session

--- a/Matplotlib/01_Matplotlib_seaborn_in_py.ipynb
+++ b/Matplotlib/01_Matplotlib_seaborn_in_py.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
     "# Sample data\n",
     "df = pd.DataFrame({'Group': ['Group 1', 'Group 2', 'Group 3', 'Group 4'],\n",
     "                   'Size': [15, 30, 45, 10]})\n",
-    "plt.pie(df['Size'], labels=df['Group'], =lambda p: format_func(p * sum(df['Siautopctze']) / 100, sum(df['Size'])), colors=['red', 'blue', 'green', 'yellow'])\n",
+    "plt.pie(df['Size'], labels=df['Group'], autopct=lambda p: format_func(p * sum(df['Size']) / 100, sum(df['Size'])), colors=['red', 'blue', 'green', 'yellow'])\n",
     "plt.title('Pie Chart Example')\n",
     "plt.show()\n"
    ]
