--- a/EDA/02_Feature_Scaling.ipynb
+++ b/EDA/02_Feature_Scaling.ipynb
@@ -50,6 +50,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "# Chat reference for formulas\n",
+        "# https://chatgpt.com/share/6839af62-7bf8-800b-804d-3d2f4c2723b9"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sD599BpqXVpS"
@@ -76,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "eNAdxmWYLN76"
       },
@@ -90,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "8IHXBXVYOiTo"
       },
@@ -102,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -123,12 +134,12 @@
             " 6   Age              9947 non-null   float64\n",
             " 7   Tenure           10000 non-null  int64  \n",
             " 8   Balance          10000 non-null  float64\n",
-            " 9   NumOfProducts    10000 non-null  int64  \n",
-            " 10  HasCrCard        10000 non-null  int64  \n",
+            " 9   NumOfProducts    9999 non-null   float64\n",
+            " 10  HasCrCard        9998 non-null   float64\n",
             " 11  IsActiveMember   10000 non-null  int64  \n",
             " 12  EstimatedSalary  10000 non-null  float64\n",
             " 13  Exited           10000 non-null  int64  \n",
-            "dtypes: float64(3), int64(8), object(3)\n",
+            "dtypes: float64(5), int64(6), object(3)\n",
             "memory usage: 1.1+ MB\n"
           ]
         }
@@ -514,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -563,88 +574,88 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>15634602</td>\n",
-              "      <td>Hargrave</td>\n",
-              "      <td>619</td>\n",
-              "      <td>India</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>42.0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>101348.88</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>15647311</td>\n",
-              "      <td>Hill</td>\n",
-              "      <td>608</td>\n",
+              "      <th>5286</th>\n",
+              "      <td>5287</td>\n",
+              "      <td>15690540</td>\n",
+              "      <td>Gearheart</td>\n",
+              "      <td>684</td>\n",
               "      <td>Sri lanka</td>\n",
               "      <td>Female</td>\n",
               "      <td>41.0</td>\n",
               "      <td>1</td>\n",
-              "      <td>73707.76</td>\n",
-              "      <td>1</td>\n",
+              "      <td>134177.06</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>112542.58</td>\n",
+              "      <td>177506.66</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>15619304</td>\n",
-              "      <td>Onio</td>\n",
-              "      <td>502</td>\n",
+              "      <th>6839</th>\n",
+              "      <td>6840</td>\n",
+              "      <td>15768282</td>\n",
+              "      <td>Perez</td>\n",
+              "      <td>724</td>\n",
+              "      <td>Russia</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>36.0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>94615.11</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>10627.21</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3629</th>\n",
+              "      <td>3630</td>\n",
+              "      <td>15738291</td>\n",
+              "      <td>Nevzorova</td>\n",
+              "      <td>671</td>\n",
               "      <td>India</td>\n",
               "      <td>Female</td>\n",
-              "      <td>42.0</td>\n",
+              "      <td>48.0</td>\n",
               "      <td>8</td>\n",
-              "      <td>159660.70</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
+              "      <td>115713.74</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0</td>\n",
-              "      <td>113931.57</td>\n",
-              "      <td>1</td>\n",
+              "      <td>83210.84</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>15701354</td>\n",
-              "      <td>Boni</td>\n",
-              "      <td>699</td>\n",
+              "      <th>3306</th>\n",
+              "      <td>3307</td>\n",
+              "      <td>15633854</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>654</td>\n",
               "      <td>India</td>\n",
               "      <td>Female</td>\n",
-              "      <td>39.0</td>\n",
-              "      <td>1</td>\n",
+              "      <td>40.0</td>\n",
+              "      <td>3</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>93826.63</td>\n",
+              "      <td>167889.10</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>15737888</td>\n",
-              "      <td>Mitchell</td>\n",
-              "      <td>850</td>\n",
+              "      <th>2993</th>\n",
+              "      <td>2994</td>\n",
+              "      <td>15709441</td>\n",
+              "      <td>Cocci</td>\n",
+              "      <td>745</td>\n",
               "      <td>Sri lanka</td>\n",
               "      <td>Female</td>\n",
-              "      <td>43.0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>135510.73</td>\n",
+              "      <td>59.0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>79084.10</td>\n",
+              "      <td>36124.98</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -652,40 +663,40 @@
               "</div>"
             ],
             "text/plain": [
-              "   RowNumber  CustomerId   Surname  CreditScore  Geography  Gender   Age  \\\n",
-              "0          1    15634602  Hargrave          619      India  Female  42.0   \n",
-              "1          2    15647311      Hill          608  Sri lanka  Female  41.0   \n",
-              "2          3    15619304      Onio          502      India  Female  42.0   \n",
-              "3          4    15701354      Boni          699      India  Female  39.0   \n",
-              "4          5    15737888  Mitchell          850  Sri lanka  Female  43.0   \n",
+              "      RowNumber  CustomerId    Surname  CreditScore  Geography  Gender   Age  \\\n",
+              "5286       5287    15690540  Gearheart          684  Sri lanka  Female  41.0   \n",
+              "6839       6840    15768282      Perez          724     Russia    Male  36.0   \n",
+              "3629       3630    15738291  Nevzorova          671      India  Female  48.0   \n",
+              "3306       3307    15633854        Sun          654      India  Female  40.0   \n",
+              "2993       2994    15709441      Cocci          745  Sri lanka  Female  59.0   \n",
               "\n",
-              "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
-              "0       2       0.00              1          1               1   \n",
-              "1       1   73707.76              1          0               1   \n",
-              "2       8  159660.70              3          1               0   \n",
-              "3       1       0.00              2          0               0   \n",
-              "4       2  135510.73              1          1               1   \n",
+              "      Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
+              "5286       1  134177.06            1.0        0.0               0   \n",
+              "6839       6   94615.11            2.0        1.0               1   \n",
+              "3629       8  115713.74            2.0        0.0               0   \n",
+              "3306       3       0.00            2.0        1.0               0   \n",
+              "2993       8       0.00            1.0        1.0               1   \n",
               "\n",
-              "   EstimatedSalary  Exited  \n",
-              "0        101348.88       1  \n",
-              "1        112542.58       0  \n",
-              "2        113931.57       1  \n",
-              "3         93826.63       0  \n",
-              "4         79084.10       0  "
+              "      EstimatedSalary  Exited  \n",
+              "5286        177506.66       0  \n",
+              "6839         10627.21       0  \n",
+              "3629         83210.84       0  \n",
+              "3306        167889.10       0  \n",
+              "2993         36124.98       0  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df.head(5)"
+        "df.sample(5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 36,
       "metadata": {
         "id": "8zJCK7rnMC9I"
       },
@@ -696,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -770,7 +781,7 @@
               "4  43.0       2"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -781,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 38,
       "metadata": {
         "id": "WJ0kL2j1NEag"
       },
@@ -792,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -823,7 +834,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -901,6 +912,13 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "xncygubcqsma"
@@ -958,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -971,6 +989,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "5.0\n",
+            "2.5298221281347035\n",
             "[[-1.18585412]\n",
             " [-0.79056942]\n",
             " [-0.39528471]\n",
@@ -981,6 +1001,9 @@
       ],
       "source": [
         "x_array = np.array([[2],[3],[4],[8],[8]])\n",
+        "\n",
+        "print(x_array.mean())\n",
+        "print(x_array.std())\n",
         "\n",
         "scaler = StandardScaler()\n",
         "normalized_arr_ss = scaler.fit_transform(x_array)\n",
@@ -993,7 +1016,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
