--- a/EDA/02_Feature_Scaling.ipynb
+++ b/EDA/02_Feature_Scaling.ipynb
@@ -57,6 +57,7 @@
       "source": [
         "\n",
         "# Chat reference for formulas\n",
+        "# https://chatgpt.com/share/6839af62-7bf8-800b-804d-3d2f4c2723b9\n",
         "# https://chatgpt.com/share/6839af62-7bf8-800b-804d-3d2f4c2723b9"
       ]
     },
@@ -151,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -210,8 +211,8 @@
               "      <td>42.0</td>\n",
               "      <td>2</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>1</td>\n",
               "      <td>101348.88</td>\n",
               "      <td>1</td>\n",
@@ -227,8 +228,8 @@
               "      <td>41.0</td>\n",
               "      <td>1</td>\n",
               "      <td>73707.76</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>1</td>\n",
               "      <td>112542.58</td>\n",
               "      <td>0</td>\n",
@@ -244,8 +245,8 @@
               "      <td>42.0</td>\n",
               "      <td>8</td>\n",
               "      <td>159660.70</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>0</td>\n",
               "      <td>113931.57</td>\n",
               "      <td>1</td>\n",
@@ -261,8 +262,8 @@
               "      <td>39.0</td>\n",
               "      <td>1</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0</td>\n",
               "      <td>93826.63</td>\n",
               "      <td>0</td>\n",
@@ -278,8 +279,8 @@
               "      <td>43.0</td>\n",
               "      <td>2</td>\n",
               "      <td>135510.73</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1</td>\n",
               "      <td>79084.10</td>\n",
               "      <td>0</td>\n",
@@ -297,11 +298,11 @@
               "4          5    15737888  Mitchell          850  Sri lanka  Female  43.0   \n",
               "\n",
               "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
-              "0       2       0.00              1          1               1   \n",
-              "1       1   73707.76              1          0               1   \n",
-              "2       8  159660.70              3          1               0   \n",
-              "3       1       0.00              2          0               0   \n",
-              "4       2  135510.73              1          1               1   \n",
+              "0       2       0.00            1.0        1.0               1   \n",
+              "1       1   73707.76            1.0        0.0               1   \n",
+              "2       8  159660.70            3.0        1.0               0   \n",
+              "3       1       0.00            2.0        0.0               0   \n",
+              "4       2  135510.73            NaN        NaN               1   \n",
               "\n",
               "   EstimatedSalary  Exited  \n",
               "0        101348.88       1  \n",
@@ -311,7 +312,7 @@
               "4         79084.10       0  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -322,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -375,8 +376,8 @@
               "      <td>9947.00</td>\n",
               "      <td>10000.00</td>\n",
               "      <td>10000.00</td>\n",
-              "      <td>10000.00</td>\n",
-              "      <td>10000.00</td>\n",
+              "      <td>9999.00</td>\n",
+              "      <td>9998.00</td>\n",
               "      <td>10000.00</td>\n",
               "      <td>10000.00</td>\n",
               "      <td>10000.0</td>\n",
@@ -495,7 +496,7 @@
               "max     10000.00  15815690.00       850.00    92.00     10.00  350797.09   \n",
               "\n",
               "       NumOfProducts  HasCrCard  IsActiveMember  EstimatedSalary   Exited  \n",
-              "count       10000.00   10000.00        10000.00         10000.00  10000.0  \n",
+              "count        9999.00    9998.00        10000.00         10000.00  10000.0  \n",
               "mean            1.53       0.71            0.52        100090.24      0.2  \n",
               "std             0.58       0.46            0.50         57510.49      0.4  \n",
               "min             1.00       0.00            0.00            11.58      0.0  \n",
@@ -505,7 +506,7 @@
               "max             4.00       1.00            1.00        199992.48      1.0  "
             ]
           },
-          "execution_count": 12,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -525,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -574,88 +575,20 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>5286</th>\n",
-              "      <td>5287</td>\n",
-              "      <td>15690540</td>\n",
-              "      <td>Gearheart</td>\n",
-              "      <td>684</td>\n",
-              "      <td>Sri lanka</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>41.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>134177.06</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>177506.66</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6839</th>\n",
-              "      <td>6840</td>\n",
-              "      <td>15768282</td>\n",
-              "      <td>Perez</td>\n",
-              "      <td>724</td>\n",
+              "      <th>6294</th>\n",
+              "      <td>6295</td>\n",
+              "      <td>15742824</td>\n",
+              "      <td>Isayeva</td>\n",
+              "      <td>696</td>\n",
               "      <td>Russia</td>\n",
               "      <td>Male</td>\n",
-              "      <td>36.0</td>\n",
-              "      <td>6</td>\n",
-              "      <td>94615.11</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>10627.21</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3629</th>\n",
-              "      <td>3630</td>\n",
-              "      <td>15738291</td>\n",
-              "      <td>Nevzorova</td>\n",
-              "      <td>671</td>\n",
-              "      <td>India</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>48.0</td>\n",
-              "      <td>8</td>\n",
-              "      <td>115713.74</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>83210.84</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3306</th>\n",
-              "      <td>3307</td>\n",
-              "      <td>15633854</td>\n",
-              "      <td>Sun</td>\n",
-              "      <td>654</td>\n",
-              "      <td>India</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>40.0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>167889.10</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2993</th>\n",
-              "      <td>2994</td>\n",
-              "      <td>15709441</td>\n",
-              "      <td>Cocci</td>\n",
-              "      <td>745</td>\n",
-              "      <td>Sri lanka</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>59.0</td>\n",
-              "      <td>8</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>163317.61</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>36124.98</td>\n",
+              "      <td>0</td>\n",
+              "      <td>121061.89</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -663,40 +596,28 @@
               "</div>"
             ],
             "text/plain": [
-              "      RowNumber  CustomerId    Surname  CreditScore  Geography  Gender   Age  \\\n",
-              "5286       5287    15690540  Gearheart          684  Sri lanka  Female  41.0   \n",
-              "6839       6840    15768282      Perez          724     Russia    Male  36.0   \n",
-              "3629       3630    15738291  Nevzorova          671      India  Female  48.0   \n",
-              "3306       3307    15633854        Sun          654      India  Female  40.0   \n",
-              "2993       2994    15709441      Cocci          745  Sri lanka  Female  59.0   \n",
+              "      RowNumber  CustomerId  Surname  CreditScore Geography Gender   Age  \\\n",
+              "6294       6295    15742824  Isayeva          696    Russia   Male  42.0   \n",
               "\n",
               "      Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
-              "5286       1  134177.06            1.0        0.0               0   \n",
-              "6839       6   94615.11            2.0        1.0               1   \n",
-              "3629       8  115713.74            2.0        0.0               0   \n",
-              "3306       3       0.00            2.0        1.0               0   \n",
-              "2993       8       0.00            1.0        1.0               1   \n",
+              "6294       7  163317.61            1.0        1.0               0   \n",
               "\n",
               "      EstimatedSalary  Exited  \n",
-              "5286        177506.66       0  \n",
-              "6839         10627.21       0  \n",
-              "3629         83210.84       0  \n",
-              "3306        167889.10       0  \n",
-              "2993         36124.98       0  "
+              "6294        121061.89       0  "
             ]
           },
-          "execution_count": 35,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df.sample(5)"
+        "df.sample()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 20,
       "metadata": {
         "id": "8zJCK7rnMC9I"
       },
@@ -707,7 +628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -781,7 +702,7 @@
               "4  43.0       2"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -792,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 22,
       "metadata": {
         "id": "WJ0kL2j1NEag"
       },
@@ -803,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -834,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -881,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -929,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
