--- a/R/List_in_R.ipynb
+++ b/R/List_in_R.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -98,13 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"apple\"\n",
+      "[1] \"banana\"\n",
+      "[1] \"cherry\"\n"
+     ]
+    }
+   ],
    "source": [
     "thislist <- list(\"apple\", \"banana\", \"cherry\")\n",
     "\n",
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -150,30 +160,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$name\n",
+      "[1] \"Alice\"\n",
+      "\n",
+      "$age\n",
+      "[1] 30\n",
+      "\n",
+      "$scores\n",
+      "[1] 95 88 92\n",
+      "\n",
+      "$passed\n",
+      "[1] TRUE\n",
+      "\n",
+      "[1] \"Alice\"\n",
+      "[1] 95 88 92\n"
+     ]
+    }
+   ],
    "source": [
+    "# Creating a simple list with different types of elements\n",
+    "my_list <- list(name = \"Alice\", age = 30, scores = c(95, 88, 92), passed = TRUE)\n",
+    "print(my_list)\n",
     "# Accessing the first element\n",
-    "my_list[[1]]\n",
+    "print(my_list[[1]])\n",
     "\n",
     "# Accessing the 'scores' element\n",
-    "my_list[[\"scores\"]]\n"
+    "print(my_list[[\"scores\"]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Alice'"
+      ],
+      "text/latex": [
+       "'Alice'"
+      ],
+      "text/markdown": [
+       "'Alice'"
+      ],
+      "text/plain": [
+       "[1] \"Alice\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Accessing the 'name' element\n",
     "my_list$name\n"
@@ -181,13 +234,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>$name</strong> = 'Alice'"
+      ],
+      "text/latex": [
+       "\\textbf{\\$name} = 'Alice'"
+      ],
+      "text/markdown": [
+       "**$name** = 'Alice'"
+      ],
+      "text/plain": [
+       "$name\n",
+       "[1] \"Alice\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This returns a sublist containing the 'name' element\n",
     "my_list[\"name\"]\n"
@@ -212,13 +285,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$name\n",
+      "[1] \"Alice\"\n",
+      "\n",
+      "$age\n",
+      "[1] 30\n",
+      "\n",
+      "$scores\n",
+      "[1] 95 88 92\n",
+      "\n",
+      "$passed\n",
+      "[1] TRUE\n",
+      "\n",
+      "$grade\n",
+      "[1] \"A\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Adding a new element to the list\n",
     "my_list$grade <- \"A\"\n",
@@ -364,7 +459,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.2"
+   "version": "4.5.1"
   }
  },
  "nbformat": 4,
