--- a/R/Vectors_in_R.ipynb
+++ b/R/Vectors_in_R.ipynb
@@ -2,7 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'30'"
+      ],
+      "text/latex": [
+       "'30'"
+      ],
+      "text/markdown": [
+       "'30'"
+      ],
+      "text/plain": [
+       "[1] \"30\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x <- 10\n",
+    "y <- 20\n",
+    "sum_xy <- x + y\n",
+    "paste(sum_xy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -14,8 +49,15 @@
      "output_type": "stream",
      "text": [
       "[1] 1 2 3 4 5\n",
-      "[1] \"apple\"  \"banana\" \"cherry\"\n",
-      "[1] 3\n"
+      "[1] \"apple\"  \"banana\" \"cherry\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 3\n",
+      "[1] \"cherry\"\n"
      ]
     }
    ],
@@ -29,12 +71,13 @@
     "print(character_vector)\n",
     "\n",
     "# Accessing elements of a vector\n",
-    "print(numeric_vector[3]) # Outputs the third element, which is 3\n"
+    "print(numeric_vector[3]) # Outputs the third element, which is 3\n",
+    "print(character_vector[3]) # Outputs the third element, which is \"cherry\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -49,26 +92,22 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>2</li><li>8</li><li>5</li><li>6</li></ol>\n"
+       "<ol class=list-inline><li>5</li><li>6</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 2\n",
-       "\\item 8\n",
        "\\item 5\n",
        "\\item 6\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 2\n",
-       "2. 8\n",
-       "3. 5\n",
-       "4. 6\n",
+       "1. 5\n",
+       "2. 6\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 2 8 5 6"
+       "[1] 5 6"
       ]
      },
      "metadata": {},
@@ -78,14 +117,37 @@
    "source": [
     "# Vector of numerical values\n",
     "numbers <- c(9, 2, 8,4,5,6)\n",
+    "print(numbers)\n",
     "\n",
-    "# Print numbers\n",
-    "numbers[c(-1,-4)]\n"
+    "# Print numbers excluding specific elements\n",
+    "print(numbers[c(-2:-4,-1)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1 1 2 2 3 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec_repeat_seq <- rep(1:3, each = 2) \n",
+    "print(vec_repeat_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -95,46 +157,68 @@
    "source": [
     "# Using c() to create a vector with specific values\n",
     "vec_numeric <- c(1, 2, 3, 4, 5)\n",
+    "print(vec_numeric)\n",
     "vec_character <- c(\"apple\", \"banana\", \"cherry\")\n",
+    "print(vec_character)\n",
     "vec_logical <- c(TRUE, FALSE, TRUE)\n",
+    "print(vec_logical)\n",
     "\n",
     "# Using the colon operator to create a sequence of numbers\n",
     "vec_sequence <- 1:10 # Equivalent to c(1, 2, 3, ..., 10)\n",
+    "print(vec_sequence)\n",
     "\n",
     "# Using the seq() function for more control over sequences\n",
     "vec_seq_step <- seq(1, 10, by = 2) # Generates: 1, 3, 5, 7, 9\n",
+    "print(vec_seq_step)\n",
     "\n",
     "# Using rep() to repeat elements\n",
     "vec_repeated <- rep(5, times = 3) # Repeats the number 5 three times: 5, 5, 5\n",
-    "vec_repeat_seq <- rep(1:3, each = 2) # Repeats each number twice: 1, 1, 2, 2, 3, 3\n"
+    "print(vec_repeated)\n",
+    "vec_repeat_seq <- rep(1:3, each = 2) # Repeats each number twice: 1, 1, 2, 2, 3, 3\n",
+    "print(vec_repeat_seq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1\n",
+      "[1] 2 4\n",
+      "[1] 2 3 4 5\n",
+      "[1] 3 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Accessing the first element\n",
     "first_element <- vec_numeric[1]\n",
+    "print(first_element)\n",
     "\n",
     "# Accessing multiple elements by specifying indices\n",
     "subset_elements <- vec_numeric[c(2, 4)] # Elements at positions 2 and 4\n",
+    "print(subset_elements)\n",
     "\n",
     "# Excluding elements by using negative indices\n",
     "exclude_first <- vec_numeric[-1] # All elements except the first\n",
+    "print(exclude_first)\n",
     "\n",
     "# Logical indexing\n",
-    "logical_indexed <- vec_numeric[vec_numeric > 2] # Only elements greater than 2\n"
+    "logical_indexed <- vec_numeric[vec_numeric > 2] # Only elements greater than 2\n",
+    "print(logical_indexed)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -144,133 +228,222 @@
    "source": [
     "# Arithmetic operations\n",
     "sum_vector <- vec_numeric + 10       # Adds 10 to each element\n",
+    "print(sum_vector)\n",
     "mult_vector <- vec_numeric * 2       # Multiplies each element by 2\n",
+    "print(mult_vector)\n",
     "\n",
     "# Summing all elements\n",
     "total_sum <- sum(vec_numeric)\n",
+    "print(total_sum)\n",
     "\n",
     "# Finding the mean and median\n",
     "average <- mean(vec_numeric)\n",
-    "median_value <- median(vec_numeric)\n"
+    "print(average)\n",
+    "median_value <- median(vec_numeric)\n",
+    "print(median_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1\n",
+      "[1] 5\n",
+      "[1] 5\n",
+      "[1] 1.581139\n",
+      "[1] 2.5\n",
+      "[1] 1.581139\n",
+      "[1] 2.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Minimum and maximum values\n",
     "min_value <- min(vec_numeric)\n",
+    "print(min_value)\n",
     "max_value <- max(vec_numeric)\n",
+    "print(max_value)\n",
     "\n",
     "# Standard deviation and variance\n",
     "std_dev <- sd(vec_numeric)\n",
-    "variance <- var(vec_numeric)\n"
+    "print(std_dev)\n",
+    "variance <- var(vec_numeric)\n",
+    "print(variance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] FALSE FALSE  TRUE  TRUE  TRUE\n",
+      "[1] TRUE\n",
+      "[1] FALSE\n"
+     ]
+    }
+   ],
    "source": [
     "# Element-wise comparison (returns a logical vector)\n",
+    "vec_numeric <- c(1, 2, 3, 4, 5)\n",
     "is_greater_than_two <- vec_numeric > 2\n",
+    "print(is_greater_than_two)\n",
     "\n",
     "# Checking for any or all true values\n",
     "any_greater_than_two <- any(vec_numeric > 2)   # TRUE if any element is greater than 2\n",
-    "all_greater_than_two <- all(vec_numeric > 2)   # TRUE if all elements are greater than 2\n"
+    "print(any_greater_than_two)\n",
+    "all_greater_than_two <- all(vec_numeric > 2)   # TRUE if all elements are greater than 2\n",
+    "print(all_greater_than_two)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1 2 3 4 5\n",
+      "[1] 5 4 3 2 1\n",
+      "[1] 1 2 3 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Sorting a vector\n",
     "sorted_vector <- sort(vec_numeric)   # Sorts in ascending order by default\n",
+    "print(sorted_vector)\n",
     "\n",
     "# Sorting in descending order\n",
     "sorted_desc <- sort(vec_numeric, decreasing = TRUE)\n",
+    "print(sorted_desc)\n",
     "\n",
     "# Ordering returns the indices that would sort the vector\n",
-    "order_indices <- order(vec_numeric)  # Useful for indexing original vector in sorted order\n"
+    "order_indices <- order(vec_numeric)  # Useful for indexing original vector in sorted order\n",
+    "print(order_indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1 2 3 4 5\n",
+      "[1] FALSE FALSE  TRUE FALSE FALSE  TRUE FALSE\n"
+     ]
+    }
+   ],
    "source": [
     "# Unique values in a vector\n",
     "unique_values <- unique(c(1, 2, 2, 3, 4, 4, 5))\n",
+    "print(unique_values)\n",
     "\n",
     "# Checking for duplicates\n",
-    "duplicates <- duplicated(c(1, 2, 2, 3, 4, 4, 5)) # TRUE for elements that have appeared before\n"
+    "duplicates <- duplicated(c(1, 2, 2, 3, 4, 4, 5)) # TRUE for elements that have appeared before\n",
+    "print(duplicates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1 2 3 4 5 6 7 8\n",
+      "[1] \"Hello\" \"world\"\n",
+      "[1] \"Hello world\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Combining two vectors\n",
     "combined_vector <- c(vec_numeric, c(6, 7, 8)) # Joins vectors into a single vector\n",
+    "print(combined_vector)\n",
     "\n",
     "# Joining with paste() (for character vectors)\n",
     "vec_text <- c(\"Hello\", \"world\")\n",
-    "joined_text <- paste(vec_text, collapse = \" \") # Joins elements with a space in between\n"
+    "print(vec_text)\n",
+    "joined_text <- paste(vec_text, collapse = \" \") # Joins elements with a space in between\n",
+    "print(joined_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]  1  2 NA  4  5\n",
+      "[1] 12\n",
+      "[1] FALSE FALSE  TRUE FALSE FALSE\n",
+      "[1] 1 2 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "vec_with_na <- c(1, 2, NA, 4, 5)\n",
+    "print(vec_with_na)\n",
     "\n",
     "# Summing while ignoring NA values\n",
     "sum_ignoring_na <- sum(vec_with_na, na.rm = TRUE)\n",
+    "print(sum_ignoring_na)\n",
     "\n",
     "# Identifying which elements are NA\n",
     "na_positions <- is.na(vec_with_na)   # Returns TRUE for each NA element\n",
+    "print(na_positions)\n",
     "\n",
     "# Removing NA values\n",
-    "vec_no_na <- vec_with_na[!is.na(vec_with_na)]\n"
+    "vec_no_na <- vec_with_na[!is.na(vec_with_na)]\n",
+    "print(vec_no_na)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -279,15 +452,18 @@
    "outputs": [],
    "source": [
     "vec_short <- c(1, 2)\n",
+    "print(vec_short)\n",
     "vec_long <- c(10, 20, 30, 40)\n",
+    "print(vec_long)\n",
     "\n",
     "# Adding a shorter vector to a longer vector (1,2 is recycled)\n",
-    "recycled_result <- vec_long + vec_short # Results in: c(11, 22, 31, 42)\n"
+    "recycled_result <- vec_long + vec_short # Results in: c(11, 22, 31, 42)\n",
+    "print(recycled_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -299,6 +475,7 @@
      "output_type": "stream",
      "text": [
       "[1] 3\n",
+      "[1] 1 3 5 7 9\n",
       "[1] 5\n",
       "[1] 11 12 13 14 15\n",
       "[1] 11 12 13 14 15\n"
@@ -312,6 +489,7 @@
     "# Access elements, handle NA, and perform operations\n",
     "print(vec[2])                      # Access second element\n",
     "no_na <- vec[!is.na(vec)]          # Remove NA values\n",
+    "print(no_na)                 # Compute mean without NA\n",
     "print(mean(no_na))                 # Compute mean without NA\n",
     "\n",
     "# Create a sequence vector, add 10 to each element, and sort it\n",
@@ -338,7 +516,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.2"
+   "version": "4.5.1"
   }
  },
  "nbformat": 4,
