updated with conditional statements, control statememets and function declarations

--- a/R/08_loops_r.ipynb
+++ b/R/08_loops_r.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0311c8d0",
    "metadata": {
     "vscode": {
@@ -48,18 +48,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"\\nFor loop with index:\"\n",
-      "[1] \"Index: 1 Value: 1\"\n",
-      "[1] \"Index: 2 Value: 2\"\n",
-      "[1] \"Index: 3 Value: 3\"\n",
-      "[1] \"Index: 4 Value: 4\"\n",
-      "[1] \"Index: 5 Value: 5\"\n"
+      "[1] \"\\nFor loop with index:\"\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error: object 'numbers' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: object 'numbers' not found\nTraceback:\n",
+      "1. paste(\"Index:\", i, \"Value:\", numbers[i])",
+      "2. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'numbers' not found\", base::quote(eval(expr, envir)))"
      ]
     }
    ],
    "source": [
     "\n",
     "# 2. For loop with index\n",
+    "\n",
     "print(\"\\nFor loop with index:\")\n",
     "for (i in 1:5) {\n",
     "    print(paste(\"Index:\", i, \"Value:\", numbers[i]))\n",
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5024677d",
    "metadata": {
     "vscode": {
@@ -81,7 +87,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"\\nFor loop with list:\"\n",
+      "[1] \"\\nFor loop with list:\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1] \"Fruit: apple\"\n",
       "[1] \"Fruit: banana\"\n",
       "[1] \"Fruit: orange\"\n"
@@ -95,6 +107,40 @@
     "print(\"\\nFor loop with list:\")\n",
     "for (fruit in fruits) {\n",
     "    print(paste(\"Fruit:\", fruit))\n",
+    "}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d01fcb8b",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"For loop with seq:\"\n",
+      "[1] \"Index: 1 Value: 1\"\n",
+      "[1] \"Index: 2 Value: 2\"\n",
+      "[1] \"Index: 3 Value: 3\"\n",
+      "[1] \"Index: 4 Value: 4\"\n",
+      "[1] \"Index: 5 Value: 5\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Alternative syntax using seq function\n",
+    "print(\"For loop with seq:\")\n",
+    "for (i in seq(1, 5)) {\n",
+    "    print(paste(\"Index:\", i, \"Value:\", i))\n",
     "}\n"
    ]
   },
