--- a/R/09_funcitons_in_R.ipynb
+++ b/R/09_funcitons_in_R.ipynb
@@ -109,14 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d7ccce68",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 16\n"
+     ]
+    }
+   ],
    "source": [
     "# Anonymous function (lambda equivalent)\n",
     "square <- function(x) x^2\n",
@@ -128,19 +136,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b360c584",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 15\n"
+     ]
+    }
+   ],
    "source": [
     "# Function with variable arguments\n",
     "sum_all <- function(...) {\n",
     "    sum(...)\n",
     "}\n",
+    "\n",
+    "# Other common aggregation functions in R:\n",
+    "# mean(...) - calculates arithmetic mean\n",
+    "# median(...) - calculates median value\n",
+    "# min(...) - finds minimum value\n",
+    "# max(...) - finds maximum value\n",
+    "# var(...) - calculates variance\n",
+    "# sd(...) - calculates standard deviation\n",
+    "# prod(...) - calculates product of all values\n",
+    "# range(...) - returns min and max values\n",
+    "# quantile(...) - calculates quantiles\n",
+    "# IQR(...) - calculates interquartile range\n",
+    "# mad(...) - calculates median absolute deviation\n",
+    "# length(...) - counts number of elements\n",
     "\n",
     "# Function call\n",
     "total <- sum_all(1, 2, 3, 4, 5)\n",
